verif/test/deca/codegen/invalid/exmathdoc-verif.res
src/test/deca/codegen/invalid/exmathdoc.deca:12:20: Math.deca: include file not found
